# mini-hyros

./: .env.example  .gitignore  .vercelignore  DEPLOY.md  Dockerfile  README.md  app.py  conftest.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: apply-sync-flow-fix.yml  ci.yml
api/: index.py
attributionops/: __main__.py  config.py  db.py  dbmeta.py  hyros_import.py  pg_conn.py  pg_dialect.py  refund_ledger.py  report.py  report_integrity.py  schema.py  util.py
attributionops/tools/: __init__.py  ads.py  attribution.py  audiences.py  campaign_filter.py  conversions.py  forecasting.py  integrations.py  logs.py  tracking.py  warehouse.py
backend/: __init__.py  database_export.py  main.py  requirements.txt
backend/api/: ad_names.py  ai_recommendations.py  auth.py  campaign_settings.py  capi.py  cohort.py  connections.py  email_sms.py  funnel.py  ghl.py  ghl_sync.py  journey.py  ltv.py  platform_auth.py  refunds.py  spend_sync.py  stripe_sync.py  webhooks.py  (+1 more)
dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.js  vitest.setup.ts
docs/: CUTOVER_STATUS.md  MIGRATION_HANDOFF.md  PROJECT_STATUS.md  RENDER_EXIT_CHECKLIST.md  SUPABASE_CUTOVER_HANDOFF.md  SUPABASE_MIGRATION.md
scripts/: apply_backend_sync_fix.py  apply_report_integrity_fixes.py  bootstrap_demo.ps1  generate_dummy_data.py  google_ads_spend_push.js  init_empty_db.py  migrate_sqlite_to_supabase.py  reconcile_hyros.py
tests/: README.md  conftest.py  helpers.py  test_report_integrity.py  test_schema_attribution_integrity.py
(+98 files in other folders)
