[project]
name = "vigil-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "websockets==12.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "psycopg[binary]>=3.2,<4",
]

[tool.pytest.ini_options]
# Make the repo root importable so `import attributionops` / `import backend` work.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: tests that exercise the FastAPI app end-to-end",
]

[tool.coverage.run]
branch = true
source = ["attributionops", "backend"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
